fixed save script and moved back to camelCase

--- a/demos/save.html
+++ b/demos/save.html
@@ -9,7 +9,7 @@
     .inlineEdit-placeholder { font-style: italic; color: #555; }
 </style>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-<script type="text/javascript" src="../jquery.inlineEdit.js"></script>
+<script type="text/javascript" src="../jquery.inlineedit.js"></script>
 <script type="text/javascript">
 
 $(function(){
