--- a/demos/default.html
+++ b/demos/default.html
@@ -13,7 +13,7 @@
 <script type="text/javascript">
 
 $(function(){
-    $('.editable').inlineedit();
+    $('.editable').inlineEdit();
 });
 
 </script>
