--- a/demos/textarea.html
+++ b/demos/textarea.html
@@ -13,7 +13,7 @@
 <script type="text/javascript">
 
 $(function(){
-    $('.editable').inlineedit({control: 'textarea'});
+    $('.editable').inlineEdit({control: 'textarea'});
 });
 
 </script>
