adds support for live loading. This breaks backwards compatibility as it uses the latest 1.4 .live() features.

--- a/demos/callbacks.html
+++ b/demos/callbacks.html
@@ -13,7 +13,11 @@
 <script type="text/javascript">
 
 $(function(){
-    $('.editable').inlineEdit();
+    $('.editable').inlineEdit({
+		save: function( event, hash ) {
+			console.log('save:' + hash.value);
+		}
+	});
 });
 
 </script>
