used correct hover class.

--- a/demos/save.html
+++ b/demos/save.html
@@ -5,7 +5,7 @@
 <title>jQuery: Inline Edit Plugin Demo</title>
 <link rel="stylesheet" href="http://yelotofu.com/labs/jquery/master.css" media="screen">
 <style type="text/css">
-    .hover { background-color: #ffC }
+    .ui-state-hover { background-color: #ffC }
     .inlineEdit-placeholder { font-style: italic; color: #555; }
 </style>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
