Fixed a smallest Typo
evemt-> event

--- a/demos/callbacks.html
+++ b/demos/callbacks.html
@@ -28,7 +28,7 @@ $(function(){
               'id: ' + this.id
             );
         },
-        change: function( evemt, widget ) {
+        change: function( event, widget ) {
             widget._debug(
               'change callback',
               'id: ' + this.id
