--- a/demos/callbacks.html
+++ b/demos/callbacks.html
@@ -34,6 +34,12 @@ $(function(){
               'id: ' + this.id
             );            
         },
+        mutate: function( event, widget ) {
+            widget._debug(
+              'mutate callback',
+              'id: ' + this.id
+            );
+        },
         debug: true
 	});
 });
